--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -19,8 +19,8 @@ body {
 .content-container {
   max-width: 48rem;
   padding: 5rem 1rem;
-  margin-left:  auto;
-  margin-right: auto;
+  margin-left:  0rem;
+  margin-right: 0rem;
 
   @media (max-width: 48rem){
     padding: 2rem 1.3rem;
