--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -17,10 +17,10 @@ body {
 }
 
 .content-container {
-  max-width: 48rem;
+  max-width: 60rem;
   padding: 5rem 1rem;
-  margin-left:  0rem;
-  margin-right: 0rem;
+  margin-left:  auto;
+  margin-right: auto;
 
   @media (max-width: 48rem){
     padding: 2rem 1.3rem;
