--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
 <header>
   <h1 class="header-small">
     <a href="{{site.url}}{{site.baseurl}}">{{ site.name }}</a>
