--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-
+<script type="text/x-mathjax-config">
 MathJax.Hub.Config({
-  tex2jax: {
-    inlineMath: [ ['$','$'], ['\\(','\\)'] ]
-  }
+  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
 });
+</script>
+<script type="text/javascript" async src="path-to-mathjax/MathJax.js?config=TeX-AMS_CHTML"></script>
 <header>
   <h1 class="header-small">
     <a href="{{site.url}}{{site.baseurl}}">{{ site.name }}</a>
