--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,12 @@ layout: default
 ---
 
 <script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-  MathJax.Hub.Config({tex2jax: {displayMath: [ ['$$','$$'], ['\[','\]'] ]}});
+  MathJax.Hub.Config({
+    tex2jax: {
+    inlineMath: [ ['$','$'], ['\\(','\\)'] ]
+    displayMath: [ ['$$','$$'], ['\[','\]'] ]
+    }
+  });
 </script>
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML">
