--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -187,13 +187,13 @@ body {
       font-size : 2rem;
       font-weight: 600;
     }
-
+/*
     &-date {
       color: $oc-gray-7;
       font-size: .8rem;
       text-transform: uppercase;
     }
-
+*/
     &-desc {
       color: $oc-gray-8;
       margin-bottom: .25rem;
