--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -183,7 +183,7 @@ body {
     }
 
     &-title {
-      margin-bottom: .1rem;
+      margin-bottom: 0rem;
       font-size : 1.5rem;
       font-weight: 600;
     }
@@ -196,7 +196,7 @@ body {
 
     &-desc {
       color: $oc-gray-8;
-      margin-bottom: .1rem;
+      margin-bottom: 0rem;
       font-size :0.75rem;
     }
   }
