--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .content-container {
-  max-width: 48rem;
+  max-width: 70rem;
   padding: 5rem 1rem;
   margin-left:  auto;
   margin-right: auto;
@@ -33,13 +33,10 @@ body {
   -------------- */
 .header {
   padding: 2%;
-  margin-bottom: 1.5em;
 
   &-title {
+    font-weight: 300;
     margin: 0.3em 0;
-    font-size: 2.25em;
-    line-height: 1.2em;
-    font-weight: 600;
 
     a {
       color: $base-color;
@@ -98,9 +95,6 @@ body {
   &-title {
     margin-top: 0;
     margin-bottom: 2rem;
-    font-size: 2.25em;
-    line-height: 1.2em;
-    font-weight: 600;
   }
 }
 
@@ -112,10 +106,7 @@ body {
 
   &-title {
     margin-top: 0rem;
-    margin-bottom: 0.3rem;
-    font-size: 2.25em;
-    line-height: 1.2em;
-    font-weight: 600;
+    margin-bottom: 0rem;
   }
 
   &-date {
@@ -126,7 +117,7 @@ body {
   }
 
    &-tag {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 
     ul {
       li:before {
@@ -136,7 +127,6 @@ body {
       li {
         margin: 0;
         font-size: .75rem;
-        font-weight: 300;
         display: inline;
         list-style-type: none;
         text-transform: lowercase;
@@ -175,7 +165,7 @@ body {
 
 .list {
   &-post {
-    padding: 4% 2%;
+    padding: 1% 0.7%;
     
     &:hover {
       background-color: $background-over-color;
@@ -193,21 +183,21 @@ body {
     }
 
     &-title {
-      margin-bottom: .3rem;
-      font-size : 1.8rem;
+      margin-bottom: 0rem;
+      font-size : 1.5rem;
       font-weight: 600;
     }
 
     &-date {
-      color: $base-lighten-color;
-      font-size: .8rem;
+      color: $oc-gray-7;
+      font-size: .6rem;
       text-transform: uppercase;
     }
 
     &-desc {
-      color: $base-color;
-      margin-bottom: .25rem;
-      font-size :1rem;
+      color: $oc-gray-8;
+      margin-bottom: 0rem;
+      font-size :0.75rem;
     }
   }
 
@@ -341,7 +331,7 @@ body {
 
       &-title {
         font-size : 1.2rem;
-        font-weight: 400;
+        font-weight: 600;
       }
 
       &-date {
